# irepa

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  fwd.hpp  pycado.cpp
bindings/python/scripts/: __init__.py
python/: acado_connect.py  acado_runner.py  acadompc.py  actorcritic.py  actorcriticnet.py  astar.py  bicopter.py  bicopter_steering.py  capture_cursor.py  cursor_tricks.py  database.np  databasexx.np  display.py  doublependulum.py  doublependulum_steering.py  explore.py  glearn.py  gplanner.py  gplanner_pendulumdouble.py  gplanner_quadcopter.py  grid_policy.py  learn_double_pendulum.py  mpc2o.py  networks.py  oprm.py  pend.py  pendulum.py  planner.py  planner2.py  plearn.py  plearn_doublependulum.py  plearn_quadcopter.py  plearn_quadcopterpendulum.py  plot_double.py  policy.py  prm.py  quadcopter.py  quadcopter_steering.py  quadcopterpendulum.py  quadcopterpendulum_steering.py  (+5 more)
python/data/planner/bicopter/: check.30traj.1e4episode.acado2-50.npy  check.acado10.npy  check.acado2.npy  check.acado20.npy  check.acado5.npy  check.acado50.npy  children.npy  connex.npy  controls.npy  edgeCost.npy  edgeTime.npy  grid_sampled.npy  policy.data-00000-of-00001  policy.index  prm.data-00000-of-00001  prm.index  prmup00.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  prmup04.data-00000-of-00001  prmup04.index  prmup05.data-00000-of-00001  prmup05.index  prmup06.data-00000-of-00001  prmup06.index  prmup07.data-00000-of-00001  prmup07.index  prmup08.data-00000-of-00001  prmup08.index  prmup09.data-00000-of-00001  prmup09.index  prmup10.data-00000-of-00001  prmup10.index  readme.txt  states.npy  (+1 more)
python/data/planner/bicopter/prm30-100-100/: children.npy  controls.npy  edgeTime.npy  states.npy  x.npy
python/data/planner/bicopter/up00/: controls.npy  edgeCost.npy  states.npy
python/data/planner/bicopter/up01/: children.npy  controls.npy  edgeCost.npy  edgeTime.npy  states.npy
python/data/planner/bicopter/up02/: children.npy  connex.npy  controls.npy  edgeCost.npy  edgeTime.npy  states.npy
python/data/planner/bicopter/up03/: children.npy  controls.npy  edgeCost.npy  edgeTime.npy  states.npy
python/data/planner/bicopter/up04/: children.npy  controls.npy  edgeTime.npy  states.npy
python/data/planner/bicopter/up05/: children.npy  controls.npy  edgeCost.npy  edgeTime.npy  states.npy
python/data/planner/bicopter/up06/: children.npy  controls.npy  edgeCost.npy  states.npy
python/data/planner/double/5_10_limits/: children.npy  connex.npy  edgeCost.npy  localControl.npy  localPath.npy  x.npy
python/data/planner/doublependulum/: checkpoint  demotraj.npy  hist.npy  prmup00.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  prmup04.data-00000-of-00001  prmup04.index  prmup05.data-00000-of-00001  prmup05.index  prmup06.data-00000-of-00001  prmup06.index  prmup07.data-00000-of-00001  prmup07.index  prmup08.data-00000-of-00001  prmup08.index  prmup09.data-00000-of-00001  prmup09.index  prmup10.data-00000-of-00001  prmup10.index  prmup11.data-00000-of-00001  prmup11.index
python/data/planner/doublependulum/prm30-100-1000/: children.npy  connex.npy  controls.npy  edgeCost.npy  states.npy  x.npy
python/data/planner/doublependulum/prm60-200-2000/: children.npy  connex.npy  controls.npy  edgeTime.npy  states.npy  x.npy
python/data/planner/doublependulum/up00/: controls.npy  edgeCost.npy  states.npy
python/data/planner/doublependulum/up01/: children.npy  controls.npy  (+2 more)
python/data/planner/quadcopter/: prmup00.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  prmup04.data-00000-of-00001  prmup04.index  prmup05.data-00000-of-00001  prmup05.index  prmup06.data-00000-of-00001  prmup06.index  prmup07.data-00000-of-00001  prmup07.index  prmup08.data-00000-of-00001  prmup08.index  prmup09.data-00000-of-00001  prmup09.index  prmup10.data-00000-of-00001  prmup10.index  prmup11.data-00000-of-00001  prmup11.index  prmup12.data-00000-of-00001  prmup12.index  prmup13.data-00000-of-00001  prmup13.index  prmup14.data-00000-of-00001  prmup14.index  prmup15.data-00000-of-00001  prmup15.index
python/data/planner/quadcopter_30x30/: checkpoint  prmup00.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  prmup04.data-00000-of-00001  prmup04.index  prmup05.data-00000-of-00001  prmup05.index  prmup06.data-00000-of-00001  prmup06.index
python/data/planner/quadcopter_50x100/: checkpoint  controls.npy  edgeTime.npy  prm.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  prmup04.data-00000-of-00001  prmup04.index  prmup05.data-00000-of-00001  prmup05.index  prmup06.data-00000-of-00001  prmup06.index  states.npy
python/data/planner/quadcopter_small/: connex.npy  edgeTime.npy  states.npy  x.npy
python/data/planner/quadcopterpendulum/: checkpoint  hist.npy  prmup00.data-00000-of-00001  prmup00.index  prmup01.data-00000-of-00001  prmup01.index  prmup02.data-00000-of-00001  prmup02.index  prmup03.data-00000-of-00001  prmup03.index  xdist.npy  xpick.npy
python/data/planner/quadrotor_small/: children.npy  controls.npy
python/netvalues/: actorcritic.15.kf2.25000.data-00000-of-00001  actorcritic.15.kf2.25000.index  actorcritic.15.kf2.data-00000-of-00001  actorcritic.15.kf2.index  fromacado.data-00000-of-00001  fromacado.index
src/: CMakeLists.txt  utils.hpp
unittest/: CMakeLists.txt  connect_bicopter.cpp  connect_double_pendulum.cpp  connect_pendulum.cpp  connect_quadcopter.cpp  connect_quadcopter_pendulum.cpp  discrete_double_pendulum.cpp  discrete_pendulum.cpp  minitime.cpp  pendulum.cpp  pendulum2o.cpp
(+180 files in other folders)
